// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vite_config > basic: reads fmt field from vite.config.ts 1`] = `
"--------------------
arguments: --check test.ts
working directory: vite_config/fixtures/basic
exit code: 1
--- STDOUT ---------
Checking formatting...

test.ts (<variable>ms)

Format issues found in above 1 files. Run without \`--check\` to fix.
Finished in <variable>ms on 1 files using 1 threads.
--- STDERR ---------

--------------------"
`;

exports[`vite_config > error: no fmt field in vite.config.ts 1`] = `
"--------------------
arguments: --check test.ts
working directory: vite_config/fixtures/error_no_fmt_field
exit code: 1
--- STDOUT ---------

--- STDERR ---------
Failed to load configuration file.
<cwd>/vite.config.ts
Expected a \`fmt\` field in the default export.
--------------------"
`;

exports[`vite_config > priority: oxfmt.config.ts takes precedence over vite.config.ts 1`] = `
"--------------------
arguments: --check test.ts
working directory: vite_config/fixtures/priority
exit code: 1
--- STDOUT ---------
Checking formatting...

test.ts (<variable>ms)

Format issues found in above 1 files. Run without \`--check\` to fix.
Finished in <variable>ms on 1 files using 1 threads.
--- STDERR ---------

--------------------"
`;
